# birthdate-alert

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_package.yaml
modules/: cli.py  conf.py  db.py  logger.py  messanger.py  templates.py  utils.py
schema/: 01-initdb.sql
templates/: alert_template.html
