[project]
name = "birthday-alert"
version = "0.2.0"
description = "Birthday alert manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "tabulate>=0.10.0",
]

[project.scripts]
birth = "modules.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modules"]
